--- a/Coban/Coban.UI/Views/Category/Index.cshtml
+++ b/Coban/Coban.UI/Views/Category/Index.cshtml
@@ -1,5 +1,71 @@
-﻿@{
+﻿@model Coban.DTO.CategoryDTO
+@{
     ViewData["Title"] = "Categories";
 }
+<style>
+    #myTable{
+        width:30%;
+    }
+    #myForm {
+        width: 70%;
+    }
+</style>
+<div class="row m-3">
+    <table id="myTable" class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Bilişim</td>
+                <td>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <form id="myForm" class="pl-5">
+        <div class="form-group row">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group row">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-check row">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
 
 
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+
+            $.ajax({
+                url: "https://localhost:44365/api/Category",
+                success: function (result) {
+                    debugger;
+                },
+                error: function (xhr, status, error) {
+                    debugger;
+                },
+                complete: function (xhr, status) {
+                    debugger;
+                }
+            });
+
+        });
+    </script>
+}
