sweet alert installed

--- a/Coban/Coban.UI/Views/Shared/_Layout.cshtml
+++ b/Coban/Coban.UI/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Coban</title>
 
     <link rel="stylesheet" href="my-bundle-css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 </head>
