--- a/Coban/Coban.UI/Views/Category/Index.cshtml
+++ b/Coban/Coban.UI/Views/Category/Index.cshtml
@@ -22,11 +22,11 @@
     </table>
     <div id="myForm" class="pl-5">
         <div class="form-group row">
-            <label for="name">Email address</label>
+            <label for="name">Name</label>
             <input type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
         <div class="form-group row">
-            <label for="description">Password</label>
+            <label for="description">Description</label>
             <input type="text" class="form-control" id="description" placeholder="Password">
         </div>
         <div class="form-check row">
@@ -51,10 +51,10 @@
                     });                   
                 },
                 error: function (xhr, status, error) {
-                    debugger;
+                    
                 },
                 complete: function (xhr, status) {
-                    debugger;
+                 
                 }
             });
 
@@ -65,20 +65,36 @@
                     name: $("#name").val(),
                     description: $("#description").val()
                 };
-                debugger
+             
                 $.ajax({
                     url: "https://localhost:44365/api/Category",
                     type: "POST",
                     data: JSON.stringify(dataModel),
                     contentType: "application/json; charset=utf-8",
                     success: function (result) {
-                        debugger;
+                     
                     },
                     error: function (xhr, status, error) {
-                        debugger;
+                        if (xhr.responseJSON.error.isShow && xhr.responseJSON.error.errors.length > 0) {
+                            let err = "";
+                            $.each(xhr.responseJSON.error.errors, function (index, value) {
+                                err += value;
+                            });
+
+                            Swal.fire({
+                                position: 'top-end',
+                                icon: 'success',
+                                title: err,
+                                showConfirmButton: false,
+                                timer: 1500
+                            });
+
+
+                        }
+
                     },
                     complete: function (xhr, status) {
-                        debugger;
+                        
                     }
                 });
             });
