--- a/Coban/Coban.UI/Views/Shared/_Layout.cshtml
+++ b/Coban/Coban.UI/Views/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
     <script src="my-bundle-js"></script>
     @RenderSection("Scripts", required: false)
 
-   
+
+    <script src="~/js/CobanLib.js"></script>
 
 
 
